--- a/Blackeye/res/values/strings.xml
+++ b/Blackeye/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Blackeye</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_feed">FeedActivity</string>
+    <string name="top5">Top 5</string>
 
 </resources>
