Added Save certain podcast Funcionality [Finishes #80604328]

--- a/Blackeye/res/values/strings.xml
+++ b/Blackeye/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="top5">Top 5</string>
     <string name="title_activity_top5">Top5Activity</string>
     <string name="title_activity_player">PlayerActivity</string>
+    <string name="title_activity_saved_tab">SavedTabActivity</string>
 
 </resources>
