--- a/Blackeye/res/values/strings.xml
+++ b/Blackeye/res/values/strings.xml
@@ -8,5 +8,11 @@
     <string name="top5">Top 5</string>
     <string name="title_activity_top5">Top5Activity</string>
     <string name="title_activity_player">PlayerActivity</string>
+    <string name="cast_description">Description</string>
+    <string name="cast_title">Title</string>
+    <string name="cast_pubdate">Publication Date</string>
+    <string name="cast_summary">Summary</string>
+    <string name="cast_duration">Duration</string>
+    <string name="cast_author">Author</string>
 
 </resources>
